--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,13 @@
 .container {
   padding: 0 2rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  flex-direction: column;
+
+  min-height: 100vh;
 }
 
 .main {
